--- a/index.html
+++ b/index.html
@@ -2,10 +2,92 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ygak-main</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <title>Youths for Green Action Kenya (YFGAK) | Empowering Youth for a Greener Future</title>
+
+    <!-- Primary Meta Tags -->
+    <meta
+      name="title"
+      content="Youths for Green Action Kenya (YFGAK) | Empowering Youth for a Greener Future"
+    />
+    <meta
+      name="description"
+      content="Youths for Green Action Kenya (YFGAK) is a youth-led organization driving climate action, reforestation, environmental education, and sustainable community transformation across Kenya."
+    />
+    <meta
+      name="keywords"
+      content="YFGAK, Youths for Green Action Kenya, Climate Action Kenya, Tree Planting, Environmental Education, Sustainability, Green Kenya, Youth Empowerment, Reforestation, Climate Change, Eco-initiatives, Environmental Conservation"
+    />
+    <meta name="author" content="Youths for Green Action Kenya" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Youths for Green Action Kenya (YFGAK) | Empowering Youth for a Greener Future"
+    />
+    <meta
+      property="og:description"
+      content="YFGAK is a youth-led environmental organization committed to restoring ecosystems and empowering young people to take climate action across Kenya."
+    />
+    <meta property="og:url" content="https://yfgak.org" />
+    <meta property="og:site_name" content="Youths for Green Action Kenya (YFGAK)" />
+    <meta property="og:image" content="/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Youths for Green Action Kenya (YFGAK) | Empowering Youth for a Greener Future"
+    />
+    <meta
+      name="twitter:description"
+      content="Join Youths for Green Action Kenya (YFGAK) in advancing sustainable development, tree planting, and environmental stewardship led by young changemakers."
+    />
+    <meta name="twitter:image" content="/og-image.jpg" />
+    <meta name="twitter:site" content="@YFGAK_Official" />
+
+    <!-- Theme and App Metadata -->
+    <meta name="theme-color" content="#1B5E20" />
+    <link rel="apple-touch-icon" href="/logo.png" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Accessibility & Performance -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="format-detection" content="telephone=no" />
+
+    <!-- Structured Data (Organization Schema) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Youths for Green Action Kenya",
+        "alternateName": "YFGAK",
+        "url": "https://yfgak.org",
+        "logo": "https://yfgak.org/logo.png",
+        "founder": "David Obuya",
+        "sameAs": [
+          "https://www.facebook.com/YFGAK",
+          "https://twitter.com/YFGAK_Official",
+          "https://www.instagram.com/YFGAK",
+          "https://www.linkedin.com/company/yfgak"
+        ],
+        "description": "A youth-led organization advancing climate action, environmental education, and sustainable community transformation in Kenya.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Nairobi",
+          "addressCountry": "KE"
+        }
+      }
+    </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
